# cmake

cmake/appmain/src/: CMakeLists.txt
cmake/appmain/src/app/: CMakeLists.txt
cmake/appmain/src/calc/: CMakeLists.txt  calc.cpp
cmake/first-test/: main.cpp
cmake/multidir/: CMakeLists.txt  main.cpp
cmake/multidir/src/: CMakeLists.txt  test1.cpp  test1.h
